Multer file handeling

--- a/Node-mongo-CRUD/index.html
+++ b/Node-mongo-CRUD/index.html
@@ -22,6 +22,15 @@
 
     <div id="update" class="my-5 ml-2"> </div>
 
+    <form
+        action="http://localhost:3000/"
+        method="post"
+        enctype="multipart/form-data"
+    >
+        <input type="file" name="avatar" class="ml-3" />
+        <input type="submit" value="Submit" class="btn btn-success"/>
+    </form>
+
 
     <script type="text/javascript">
         function loadProducts() {
